--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,65 @@ header {
     top: 0;
     left: 240px;
 }
+
+/* about section */
+.about {
+    background-color: #A5978E;
+    padding: 50px;
+    color: #FAFAFA;
+}
+.about__inner{
+    display: flex;
+    align-items: center;
+    column-gap: 110px;
+    justify-content: space-between;
+}
+.about__content {
+    min-width: 370px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.about__title {
+    font-size: 40px;
+    font-weight: 400;
+    font-family: 'Yeseva One', cursive;
+    line-height: 1.15;
+}
+.about__list {
+    display: flex;
+    gap: 20px;
+    padding-bottom: 48px;
+    align-items: center;
+    position: relative;
+    min-width: 930px;
+}
+.about__list::before {
+    content: "";
+    position: absolute;
+    left: -110px;
+    bottom: -8px;
+    background-image: url(/images/about-decor.png);
+    width: 22px;
+    height: 30px;
+}
+.about__list::after {
+    content: "";
+    position: absolute;
+    left: -89px;
+    bottom: 0;
+    height: 1px;
+    background-color: #7b6152;
+    width: 1000%;
+
+}
+.about__item-img {
+    margin-bottom: 10px;
+}
+.about__text {
+    font-size: 11px;
+}
+
 /* footer */
 .footer {
     padding: 40px 0 35px 0;
@@ -290,3 +349,4 @@ header {
     }
 }
 /* RESPONSIVE MEDIA */
+/* 3:44 */
